Windows 10 Entry removed

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1915,26 +1915,7 @@
 			<integer>1</integer>
 		</dict>
 		<key>Entries</key>
-		<array>
-			<dict>
-				<key>Arguments</key>
-				<string></string>
-				<key>Auxiliary</key>
-				<false/>
-				<key>Comment</key>
-				<string>Not signed for security reasons</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Flavour</key>
-				<string>Auto</string>
-				<key>Name</key>
-				<string>Windows10</string>
-				<key>Path</key>
-				<string>PciRoot(0x0)/Pci(0x1D,0x0)/Pci(0x0,0x0)/NVMe(0x1,AB-A5-46-00-03-8E-E3-8C)/HD(1,GPT,C54E97EF-E6A2-4E3F-28E1-BB784DF8C4FA,0x800,0x5F800)/\EFI\Microsoft\Boot\bootmgfw-orig.efi</string>
-				<key>TextMode</key>
-				<false/>
-			</dict>
-		</array>
+		<array/>
 		<key>Security</key>
 		<dict>
 			<key>AllowSetDefault</key>
