--- a/EFI/OC/Kexts/USBMap.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/USBMap.kext/Contents/Info.plist
@@ -43,62 +43,134 @@
 				<key>kUSBMuxEnabled</key>
 				<true/>
 				<key>port-count</key>
-				<data>DwAAAA==</data>
+				<data>
+				DwAAAA==
+				</data>
 				<key>ports</key>
 				<dict>
 					<key>HS01</key>
 					<dict>
+						<key>#port</key>
+						<data>
+						AQAAAA==
+						</data>
 						<key>UsbConnector</key>
-						<integer>8</integer>
-						<key>port</key>
-						<data>AQAAAA==</data>
+						<integer>3</integer>
 					</dict>
 					<key>HS02</key>
 					<dict>
+						<key>#port</key>
+						<data>
+						AgAAAA==
+						</data>
 						<key>UsbConnector</key>
 						<integer>3</integer>
-						<key>#port</key>
-						<data>AgAAAA==</data>
 					</dict>
 					<key>HS03</key>
 					<dict>
-						<key>port</key>
-						<data>AwAAAA==</data>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>port</key>
+						<data>
+						AwAAAA==
+						</data>
 					</dict>
 					<key>HS04</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>2</integer>
-						<key>#port</key>
-						<data>BAAAAA==</data>
+						<integer>3</integer>
+						<key>port</key>
+						<data>
+						BAAAAA==
+						</data>
 					</dict>
 					<key>HS05</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>3</integer>
 						<key>port</key>
-						<data>BQAAAA==</data>
+						<data>
+						BQAAAA==
+						</data>
 					</dict>
 					<key>HS06</key>
 					<dict>
-						<key>port</key>
-						<data>BgAAAA==</data>
 						<key>UsbConnector</key>
-						<integer>255</integer>
+						<integer>3</integer>
+						<key>port</key>
+						<data>
+						BgAAAA==
+						</data>
+					</dict>
+					<key>HS07</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						BwAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS08</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						CAAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS09</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						CQAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
 					</dict>
 					<key>HS10</key>
 					<dict>
-						<key>port</key>
-						<data>CgAAAA==</data>
+						<key>#port</key>
+						<data>
+						CgAAAA==
+						</data>
 						<key>UsbConnector</key>
-						<integer>255</integer>
+						<integer>3</integer>
+					</dict>
+					<key>HS11</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						CwAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS12</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						DAAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
 					</dict>
 					<key>SS01</key>
 					<dict>
 						<key>#port</key>
-						<data>DQAAAA==</data>
+						<data>
+						DQAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>SS02</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						DgAAAA==
+						</data>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 					</dict>
@@ -107,7 +179,36 @@
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
-						<data>DwAAAA==</data>
+						<data>
+						DwAAAA==
+						</data>
+					</dict>
+					<key>SS04</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						EAAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>SS05</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						EQAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>SS06</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						EgAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
 					</dict>
 				</dict>
 			</dict>
